k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: higgs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - higgs.gihc.online
      secretName: higgs-tls
    - hosts:
        - ipfs.higgs.gihc.online
      secretName: higgs-ipfs-tls
  rules:
    - host: higgs.gihc.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: higgs
                port:
                  number: 80
    - host: ipfs.higgs.gihc.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipfs-gateway
                port:
                  number: 80
